# Contexto

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  build.sh  docker-compose.prod.yaml  docker-compose.yml  install-deps.sh  package-lock.json
backend/: .clang-format  CMakeLists.txt
backend/assets/: blacklisted_words.txt  dictionary.txt  small_russian_nouns.txt
backend/configs/: static_config.yaml
backend/sber-nlp/: caila_import.json  chatbot.yaml
backend/sber-nlp/src/: entryPoint.sc
backend/sber-nlp/src/js/: actions.js  getters.js  reply.js  stats.js
backend/sber-nlp/src/sc/: getHint.sc  giveUp.sc  guessWord.sc  help.sc  newGame.sc  rules.sc
backend/scripts/: build.sh  format.sh  lint.sh  run.sh  run_tests.sh  test_matrix.sh
backend/src/: CMakeLists.txt  main.cpp  pch.hpp
backend/src/contesto/: guess_handler.cpp  guess_handler.hpp  new_game_handler.cpp  new_game_handler.hpp  session_manager.cpp  session_manager.hpp  word_similarity_service.cpp  word_similarity_service.hpp
backend/src/contesto/models/: word.hpp
backend/src/contexto/: dictionary_filter_component.cpp  dictionary_filter_component.hpp  give_up_handler.cpp  give_up_handler.hpp  guess_handler.cpp  guess_handler.hpp  new_game_handler.cpp  new_game_handler.hpp  session_manager.cpp  session_manager.hpp  word_dictionary_component.cpp  word_dictionary_component.hpp  word_similarity_service.cpp  word_similarity_service.hpp
backend/src/contexto/models/: dictionary_word.hpp  word.hpp
backend/src/contexto/word-embedding/: word_dictionary.cpp  word_dictionary.hpp
backend/src/hello/: hello_handler.cpp  hello_handler.hpp
backend/tests/contexto/: CMakeLists.txt
backend/tests/hello/: hello_test.cpp
backend/tests/utils/: CMakeLists.txt  utf8_test.cpp
cmake/: DownloadUserver.cmake  get_cpm.cmake
configs/: static_config.yaml
frontend/: .env  .env.example  env.d.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.tsx  GlobalStyle.tsx  logger-init.ts  main.tsx  types.ts
frontend/src/components/: Celebration.tsx  GuessInput.tsx  VoiceFeedback.tsx  WelcomeScreen.tsx  WordsList.tsx
frontend/src/pages/: ContextoGame.tsx
frontend/src/styles/: Celebration.css  VoiceFeedback.css
frontend/src/utils/: logging.ts
frontend/tests/: App.test.tsx  setup.ts
src/: CMakeLists.txt  main.cpp  pch.hpp
src/contexto/: guess_handler.cpp  guess_handler.hpp  new_game_handler.cpp  new_game_handler.hpp  session_manager.cpp  session_manager.hpp  word_dictionary_component.cpp  word_dictionary_component.hpp
src/contexto/models/: dictionary_word.hpp  word.hpp
src/contexto/word-embedding/: word_dictionary.cpp  word_dictionary.hpp
src/hello/: hello_handler.cpp  hello_handler.hpp
src/utils/: utf8.hpp
tests/hello/: CMakeLists.txt  hello_test.cpp
utils/dictionary_converter/: dictionary_converter.py  requirements.txt
